--- a/css/style.scss
+++ b/css/style.scss
@@ -106,48 +106,49 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .links {
+    }
+
+    .links {
+        display: flex;
+        li {
             display: flex;
-            li {
-                display: flex;
-                align-items: center;
-                &:not(:last-child) {
-                    margin-right: 33px;
-                }
-                &::after {
-                    content: " ";
-                    background-image: url(../img/arrow-hover.svg);
-                    background-size: contain;
-                    background-position: center;
-                    background-repeat: no-repeat;
-                    display: block;
-                    width: 12px;
-                    height: 8px;
-                    margin-left: 5px;
-                    transition: all 0.4s ease;
-                    opacity: 0;
-                }
-                &:hover::after{
-                    opacity: 1;
-                }
-                .header__link {
-                    text-transform: uppercase;
-                }
+            align-items: center;
+            &:not(:last-child) {
+                margin-right: 33px;
+            }
+            &::after {
+                content: " ";
+                background-image: url(../img/arrow-hover.svg);
+                background-size: contain;
+                background-position: center;
+                background-repeat: no-repeat;
+                display: block;
+                width: 12px;
+                height: 8px;
+                margin-left: 5px;
+                transition: all 0.4s ease;
+                opacity: 0;
+            }
+            &:hover::after{
+                opacity: 1;
+            }
+            .header__link {
+                text-transform: uppercase;
             }
         }
+    }
 
-        .buttons {
-            margin-right: 28px;
-            display: flex;
-            button {
-                border: none;
-                background-color: transparent;
-                &:not(:last-child) {
-                    margin-right: 17px;
-                }
-                &:hover {
-                    transform: scale(1.2);
-                }
+    .buttons {
+        margin-right: 28px;
+        display: flex;
+        button {
+            border: none;
+            background-color: transparent;
+            &:not(:last-child) {
+                margin-right: 17px;
+            }
+            &:hover {
+                transform: scale(1.2);
             }
         }
     }
@@ -159,30 +160,6 @@ header {
         display: flex;
         max-height: 550px;
         overflow: hidden;
-        
-        .banner__btn{
-            display: block;
-            position: absolute;
-            width: 14px;
-            height: 26px;
-            top: calc(50% - 13px);
-            background-color: transparent;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            border: none;
-
-            &.banner__prev{
-                background-image: url(../img/arrow-left-banner.svg);
-                left: 18px;
-            }
-            
-            &.banner__next{
-                background-image: url(../img/arrow-left-banner.svg);
-                transform: rotate(180deg);
-                right: 18px;
-            }
-        }
         
         .info {
             display: flex;
@@ -205,6 +182,30 @@ header {
             object-fit: cover;
         }
     }
+
+    .banner__btn{
+        display: block;
+        position: absolute;
+        width: 14px;
+        height: 26px;
+        top: calc(50% - 13px);
+        background-color: transparent;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
+
+        &.banner__prev{
+            background-image: url(../img/arrow-left-banner.svg);
+            left: 18px;
+        }
+        
+        &.banner__next{
+            background-image: url(../img/arrow-left-banner.svg);
+            transform: rotate(180deg);
+            right: 18px;
+        }
+    }
 }
 
 /* CATEGORIES Section */
@@ -225,92 +226,97 @@ section.categories {
     .tabs {
         margin: 0 auto;
         display: flex;
-        .hor {
-            width: 50%;
-            text-align: right;
-            .tab {
-                padding: 0 42px;
-                transition: top 0.4s ease;
-                &:not(:first-child) {
-                    margin-top: 50px;
-                }
-            }
-            .tab_big {
-                padding-bottom: 38px;
-            }
-            
-            .tab_flex {
-                display: flex;
-                align-items: center;
-            }
-        }
+    }
 
-        .vert {
-            width: 50%;
-            display: flex;
-            text-align: center;
-            margin-left: 16px;
-            .tab {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                transition: top 0.6s ease;
-                width: 50%;
-                .tab__head, .tab__desc {
-                    padding: 0 32px;
-                }
-            }
-            .tab:not(:first-child) {
-                margin-left: 16px;
-            }
-        }
-
+    .hor {
+        width: 50%;
+        text-align: right;
         .tab {
-            box-shadow: 0 4px 35px rgba(0, 0, 0, 0.25);
-            overflow: hidden;
-            top: 0;
-            .tab__img {
-                transition: transform 1s ease;
-                background-repeat: no-repeat;
-                background-size: cover;
-                background-position: center;
-            }
-            &:hover .tab__img {
-                transform: scale(1.2);
-            }
-            &:nth-child(odd):hover {
-                top: -22px;
-            }
-            
-            &:nth-child(even):hover {
-                top: 22px;
-            }
-            .tab__img_laptops {
-                background-image: url(../img/laptops.png);
-                height: 377px;
-                max-width: 500px;
-            }
-            
-            .tab__img_watches {
-                background-image: url(../img/watches.png);
-                width: 90%;
-                height: 270px;
-            }
-            
-            .tab__img_phones {
-                background-image: url(../img/phones.png);
-                height: 367px;
-                margin-bottom: 42px;
-                background-position: left;
-                left: 16px;
-            }
-            
-            .tab__img_tablets {
-                background-image: url(../img/tablets.png);
-                height: 425px;
-                margin-top: 42px;
+            padding: 0 42px;
+            transition: top 0.4s ease;
+            &:not(:first-child) {
+                margin-top: 50px;
             }
         }
+    }
+
+    .vert {
+        width: 50%;
+        display: flex;
+        text-align: center;
+        margin-left: 16px;
+        .tab {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            transition: top 0.6s ease;
+            width: 50%;
+        }
+        .tab__head, .tab__desc {
+            padding: 0 32px;
+        }
+        .tab:not(:first-child) {
+            margin-left: 16px;
+        }
+    }
+
+    .tab_big {
+        padding-bottom: 38px;
+    }
+    
+    .tab_flex {
+        display: flex;
+        align-items: center;
+    }
+
+    .tab {
+        box-shadow: 0 4px 35px rgba(0, 0, 0, 0.25);
+        overflow: hidden;
+        top: 0;
+        &:hover .tab__img {
+            transform: scale(1.2);
+        }
+        &:nth-child(odd):hover {
+            top: -22px;
+        }
+        
+        &:nth-child(even):hover {
+            top: 22px;
+        }
+        
+    }
+
+    .tab__img {
+        transition: transform 1s ease;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .tab__img_laptops {
+        background-image: url(../img/laptops.png);
+        height: 377px;
+        max-width: 500px;
+    }
+    
+    .tab__img_watches {
+        background-image: url(../img/watches.png);
+        width: 90%;
+        height: 270px;
+    }
+    
+    .tab__img_phones {
+        background-image: url(../img/phones.png);
+        height: 367px;
+        margin-bottom: 42px;
+        background-position: left;
+        left: 16px;
+    }
+    
+    .tab__img_tablets {
+        background-image: url(../img/tablets.png);
+        height: 425px;
+        margin-top: 42px;
     }
     
 }
@@ -329,34 +335,35 @@ section.popular {
         display: flex;
         justify-content: space-between;
         align-items: stretch;
-        .item {
-            width: 23%;
-            img {
-                width: 100%;
-                height: 272px;
-                padding: 28px;
-                object-fit: contain;
-                margin: 0 auto;
-                display: block;
-            }
-            h5 {
-                margin-top: 8px;
-            }
-            p {
-                font-size: 1rem;
-                padding-right: 41px;
-                margin: 9px 0 30px;
-                display: -webkit-box;
-                -webkit-line-clamp: 3;
-                -webkit-box-orient: vertical;  
-                overflow: hidden;
-            }
-            span {
-                font-size: 1.285rem;
-                position: absolute;
-                bottom: 1px;
-                left: 0px;
-            }
+    }
+
+    .item {
+        width: 23%;
+        img {
+            width: 100%;
+            height: 272px;
+            padding: 28px;
+            object-fit: contain;
+            margin: 0 auto;
+            display: block;
+        }
+        h5 {
+            margin-top: 8px;
+        }
+        p {
+            font-size: 1rem;
+            padding-right: 41px;
+            margin: 9px 0 30px;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;  
+            overflow: hidden;
+        }
+        span {
+            font-size: 1.285rem;
+            position: absolute;
+            bottom: 1px;
+            left: 0px;
         }
     }
 }
@@ -375,24 +382,24 @@ section.best {
     .items {
         display: flex;
         justify-content: space-between;
-        .item {
-            max-width: 33%;
-            background-color: #F8F9FA;
-            border-radius: 16px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 41px 29px 0;
-            text-align: center;
-            button {
-                margin: 30px auto;
-                padding: 14px 63px;
-            }
-            img {
-                width: 355px;
-                height: 250px;
-                object-fit: contain;
-            }
+    }
+    .item {
+        max-width: 33%;
+        background-color: #F8F9FA;
+        border-radius: 16px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 41px 29px 0;
+        text-align: center;
+        button {
+            margin: 30px auto;
+            padding: 14px 63px;
+        }
+        img {
+            width: 355px;
+            height: 250px;
+            object-fit: contain;
         }
     }
 }
@@ -491,16 +498,16 @@ section.search {
         gap: 7px;
         max-width: 640px;
         margin: 0 auto;
-    }
-    button {
-        padding: 12px 22px 13px;
-        background: transparent;
-        border: 1px solid #C5C5C5;
-        border-radius: 200px;
-        font-size: 1rem;
-        color: #000;
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.1);
+        button {
+            padding: 12px 22px 13px;
+            background: transparent;
+            border: 1px solid #C5C5C5;
+            border-radius: 200px;
+            font-size: 1rem;
+            color: #000;
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.1);
+            }
         }
     }
 }
@@ -508,45 +515,6 @@ section.search {
 /* MAIL Section */
 section.mail {
     padding-top: 67px;
-    .banner {
-        max-width: 935px;
-        margin: 0 auto;
-        background-color: #DCE5E2;
-        border-radius: 16px;
-        padding: 47px 40px 43px;
-        .bar {
-            width: 400px;
-            height: 50px;
-            margin: 0 auto;
-            border-radius: 54px;
-            border: 1px solid #000;
-            display: flex;
-            flex-direction: row;
-            overflow: hidden;
-            input {
-                width: 100%;
-                padding: 16px 33px 17px 32px;
-                background-color: transparent;
-                font-family: inherit;
-                outline: none;
-                border: none;
-                font-size: 1rem;
-            }
-            button{
-                background-color: #000;
-                color: #fff;
-                white-space: nowrap;
-                padding: 16px 33px 17px 32px;
-                max-height: 100%;
-                outline: none;
-                border: none;
-                font-size: 1rem;
-                &:hover{
-                    opacity: 0.7;
-                }
-            }
-        }
-    }
     .mail__header {
         text-align: center;
     }
@@ -562,6 +530,45 @@ section.mail {
         margin: 14.5px auto 13.5px;
         display: block;
     }
+    .banner {
+        max-width: 935px;
+        margin: 0 auto;
+        background-color: #DCE5E2;
+        border-radius: 16px;
+        padding: 47px 40px 43px;
+    }
+    .bar {
+        width: 400px;
+        height: 50px;
+        margin: 0 auto;
+        border-radius: 54px;
+        border: 1px solid #000;
+        display: flex;
+        flex-direction: row;
+        overflow: hidden;
+        input {
+            width: 100%;
+            padding: 16px 33px 17px 32px;
+            background-color: transparent;
+            font-family: inherit;
+            outline: none;
+            border: none;
+            font-size: 1rem;
+        }
+        button{
+            background-color: #000;
+            color: #fff;
+            white-space: nowrap;
+            padding: 16px 33px 17px 32px;
+            max-height: 100%;
+            outline: none;
+            border: none;
+            font-size: 1rem;
+            &:hover{
+                opacity: 0.7;
+            }
+        }
+    }
 }
 
 /* FOOTER Section */
@@ -572,60 +579,61 @@ footer {
         display: flex;
         justify-content: space-between;
         padding: 49px 0 82px;
-        .about {
-            width: 304px;
-            top: 11px;
-            .about__logo {
-                width: 181px;
-                height: 22px;
-            }
-            .about__desc {
-                margin-top: 14px;
-                font-size: 16px;
-            }
-            
+    }
+
+    .about {
+        width: 304px;
+        top: 11px;  
+    }
+    .about__logo {
+        width: 181px;
+        height: 22px;
+    }
+    .about__desc {
+        margin-top: 14px;
+        font-size: 16px;
+    }
+
+    .list {
+        h5 {
+            margin-bottom: 20px;
         }
-        .list {
-            h5 {
-                margin-bottom: 20px;
-            }
-            li {
-                font-size: 17px;
-                &:not(:first-child) {
-                    margin-top: 15px;
-                }
+        li {
+            font-size: 17px;
+            &:not(:first-child) {
+                margin-top: 15px;
             }
         }
     }
+
     hr {
         border: none;
         border-top: 1px solid #DCE5E2;
     }
+
     .credentials {
         padding-top: 53px;
         font-size: 18px;
         display: flex;
         justify-content: space-between;
-        div {
-            display: flex;
-            span {
-                font-family: $secondFont;
-                white-space: nowrap;
-            }
-            a {
-                margin-left: 7px;
-                display: flex;
-                &:after {
-                    content: " ";
-                    width: 21px;
-                    height: 18px;
-                    margin-left: 3px;
-                    background-image: url(../img/link-thin.svg);
-                    background-size: contain;
-                    background-position: center;
-                    background-repeat: no-repeat;
-                }
-            }
+    }
+    .credit {display: flex;}
+    .credit__label {
+        font-family: $secondFont;
+        white-space: nowrap;
+    }
+    .credit__link {
+        margin-left: 7px;
+        display: flex;
+        &:after {
+            content: " ";
+            width: 21px;
+            height: 18px;
+            margin-left: 3px;
+            background-image: url(../img/link-thin.svg);
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     }
 }
