--- a/css/style.css
+++ b/css/style.css
@@ -101,17 +101,17 @@ header nav {
   align-items: center;
   justify-content: space-between;
 }
-header nav .links {
+header .links {
   display: flex;
 }
-header nav .links li {
+header .links li {
   display: flex;
   align-items: center;
 }
-header nav .links li:not(:last-child) {
+header .links li:not(:last-child) {
   margin-right: 33px;
 }
-header nav .links li::after {
+header .links li::after {
   content: " ";
   background-image: url(../img/arrow-hover.svg);
   background-size: contain;
@@ -124,24 +124,24 @@ header nav .links li::after {
   transition: all 0.4s ease;
   opacity: 0;
 }
-header nav .links li:hover::after {
+header .links li:hover::after {
   opacity: 1;
 }
-header nav .links li .header__link {
+header .links li .header__link {
   text-transform: uppercase;
 }
-header nav .buttons {
+header .buttons {
   margin-right: 28px;
   display: flex;
 }
-header nav .buttons button {
+header .buttons button {
   border: none;
   background-color: transparent;
 }
-header nav .buttons button:not(:last-child) {
+header .buttons button:not(:last-child) {
   margin-right: 17px;
 }
-header nav .buttons button:hover {
+header .buttons button:hover {
   transform: scale(1.2);
 }
 header .banner {
@@ -151,27 +151,6 @@ header .banner {
   display: flex;
   max-height: 550px;
   overflow: hidden;
-}
-header .banner .banner__btn {
-  display: block;
-  position: absolute;
-  width: 14px;
-  height: 26px;
-  top: calc(50% - 13px);
-  background-color: transparent;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  border: none;
-}
-header .banner .banner__btn.banner__prev {
-  background-image: url(../img/arrow-left-banner.svg);
-  left: 18px;
-}
-header .banner .banner__btn.banner__next {
-  background-image: url(../img/arrow-left-banner.svg);
-  transform: rotate(180deg);
-  right: 18px;
 }
 header .banner .info {
   display: flex;
@@ -193,6 +172,27 @@ header .banner .image {
   -o-object-fit: cover;
      object-fit: cover;
 }
+header .banner__btn {
+  display: block;
+  position: absolute;
+  width: 14px;
+  height: 26px;
+  top: calc(50% - 13px);
+  background-color: transparent;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+}
+header .banner__btn.banner__prev {
+  background-image: url(../img/arrow-left-banner.svg);
+  left: 18px;
+}
+header .banner__btn.banner__next {
+  background-image: url(../img/arrow-left-banner.svg);
+  transform: rotate(180deg);
+  right: 18px;
+}
 
 /* CATEGORIES Section */
 section.categories {
@@ -211,81 +211,81 @@ section.categories .tabs {
   margin: 0 auto;
   display: flex;
 }
-section.categories .tabs .hor {
+section.categories .hor {
   width: 50%;
   text-align: right;
 }
-section.categories .tabs .hor .tab {
+section.categories .hor .tab {
   padding: 0 42px;
   transition: top 0.4s ease;
 }
-section.categories .tabs .hor .tab:not(:first-child) {
+section.categories .hor .tab:not(:first-child) {
   margin-top: 50px;
 }
-section.categories .tabs .hor .tab_big {
-  padding-bottom: 38px;
-}
-section.categories .tabs .hor .tab_flex {
-  display: flex;
-  align-items: center;
-}
-section.categories .tabs .vert {
+section.categories .vert {
   width: 50%;
   display: flex;
   text-align: center;
   margin-left: 16px;
 }
-section.categories .tabs .vert .tab {
+section.categories .vert .tab {
   display: flex;
   flex-direction: column;
   justify-content: center;
   transition: top 0.6s ease;
   width: 50%;
 }
-section.categories .tabs .vert .tab .tab__head, section.categories .tabs .vert .tab .tab__desc {
+section.categories .vert .tab__head, section.categories .vert .tab__desc {
   padding: 0 32px;
 }
-section.categories .tabs .vert .tab:not(:first-child) {
+section.categories .vert .tab:not(:first-child) {
   margin-left: 16px;
 }
-section.categories .tabs .tab {
+section.categories .tab_big {
+  padding-bottom: 38px;
+}
+section.categories .tab_flex {
+  display: flex;
+  align-items: center;
+}
+section.categories .tab {
   box-shadow: 0 4px 35px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   top: 0;
 }
-section.categories .tabs .tab .tab__img {
+section.categories .tab:hover .tab__img {
+  transform: scale(1.2);
+}
+section.categories .tab:nth-child(odd):hover {
+  top: -22px;
+}
+section.categories .tab:nth-child(even):hover {
+  top: 22px;
+}
+section.categories .tab__img {
   transition: transform 1s ease;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
-section.categories .tabs .tab:hover .tab__img {
-  transform: scale(1.2);
-}
-section.categories .tabs .tab:nth-child(odd):hover {
-  top: -22px;
-}
-section.categories .tabs .tab:nth-child(even):hover {
-  top: 22px;
-}
-section.categories .tabs .tab .tab__img_laptops {
+section.categories .tab__img_laptops {
   background-image: url(../img/laptops.png);
   height: 377px;
   max-width: 500px;
 }
-section.categories .tabs .tab .tab__img_watches {
+section.categories .tab__img_watches {
   background-image: url(../img/watches.png);
   width: 90%;
   height: 270px;
 }
-section.categories .tabs .tab .tab__img_phones {
+section.categories .tab__img_phones {
   background-image: url(../img/phones.png);
   height: 367px;
   margin-bottom: 42px;
   background-position: left;
   left: 16px;
 }
-section.categories .tabs .tab .tab__img_tablets {
+section.categories .tab__img_tablets {
   background-image: url(../img/tablets.png);
   height: 425px;
   margin-top: 42px;
@@ -307,10 +307,10 @@ section.popular .items {
   justify-content: space-between;
   align-items: stretch;
 }
-section.popular .items .item {
+section.popular .item {
   width: 23%;
 }
-section.popular .items .item img {
+section.popular .item img {
   width: 100%;
   height: 272px;
   padding: 28px;
@@ -319,10 +319,10 @@ section.popular .items .item img {
   margin: 0 auto;
   display: block;
 }
-section.popular .items .item h5 {
+section.popular .item h5 {
   margin-top: 8px;
 }
-section.popular .items .item p {
+section.popular .item p {
   font-size: 1rem;
   padding-right: 41px;
   margin: 9px 0 30px;
@@ -331,7 +331,7 @@ section.popular .items .item p {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-section.popular .items .item span {
+section.popular .item span {
   font-size: 1.285rem;
   position: absolute;
   bottom: 1px;
@@ -354,7 +354,7 @@ section.best .items {
   display: flex;
   justify-content: space-between;
 }
-section.best .items .item {
+section.best .item {
   max-width: 33%;
   background-color: #F8F9FA;
   border-radius: 16px;
@@ -364,11 +364,11 @@ section.best .items .item {
   padding: 41px 29px 0;
   text-align: center;
 }
-section.best .items .item button {
+section.best .item button {
   margin: 30px auto;
   padding: 14px 63px;
 }
-section.best .items .item img {
+section.best .item img {
   width: 355px;
   height: 250px;
   -o-object-fit: contain;
@@ -472,7 +472,7 @@ section.search .search_suggestions {
   max-width: 640px;
   margin: 0 auto;
 }
-section.search button {
+section.search .search_suggestions button {
   padding: 12px 22px 13px;
   background: transparent;
   border: 1px solid #C5C5C5;
@@ -480,52 +480,13 @@ section.search button {
   font-size: 1rem;
   color: #000;
 }
-section.search button:hover {
+section.search .search_suggestions button:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
 /* MAIL Section */
 section.mail {
   padding-top: 67px;
-}
-section.mail .banner {
-  max-width: 935px;
-  margin: 0 auto;
-  background-color: #DCE5E2;
-  border-radius: 16px;
-  padding: 47px 40px 43px;
-}
-section.mail .banner .bar {
-  width: 400px;
-  height: 50px;
-  margin: 0 auto;
-  border-radius: 54px;
-  border: 1px solid #000;
-  display: flex;
-  flex-direction: row;
-  overflow: hidden;
-}
-section.mail .banner .bar input {
-  width: 100%;
-  padding: 16px 33px 17px 32px;
-  background-color: transparent;
-  font-family: inherit;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-}
-section.mail .banner .bar button {
-  background-color: #000;
-  color: #fff;
-  white-space: nowrap;
-  padding: 16px 33px 17px 32px;
-  max-height: 100%;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-}
-section.mail .banner .bar button:hover {
-  opacity: 0.7;
 }
 section.mail .mail__header {
   text-align: center;
@@ -543,6 +504,45 @@ section.mail .mail__img {
   margin: 14.5px auto 13.5px;
   display: block;
 }
+section.mail .banner {
+  max-width: 935px;
+  margin: 0 auto;
+  background-color: #DCE5E2;
+  border-radius: 16px;
+  padding: 47px 40px 43px;
+}
+section.mail .bar {
+  width: 400px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 54px;
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+section.mail .bar input {
+  width: 100%;
+  padding: 16px 33px 17px 32px;
+  background-color: transparent;
+  font-family: inherit;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+}
+section.mail .bar button {
+  background-color: #000;
+  color: #fff;
+  white-space: nowrap;
+  padding: 16px 33px 17px 32px;
+  max-height: 100%;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+}
+section.mail .bar button:hover {
+  opacity: 0.7;
+}
 
 /* FOOTER Section */
 footer {
@@ -554,25 +554,25 @@ footer nav {
   justify-content: space-between;
   padding: 49px 0 82px;
 }
-footer nav .about {
+footer .about {
   width: 304px;
   top: 11px;
 }
-footer nav .about .about__logo {
+footer .about__logo {
   width: 181px;
   height: 22px;
 }
-footer nav .about .about__desc {
+footer .about__desc {
   margin-top: 14px;
   font-size: 16px;
 }
-footer nav .list h5 {
+footer .list h5 {
   margin-bottom: 20px;
 }
-footer nav .list li {
+footer .list li {
   font-size: 17px;
 }
-footer nav .list li:not(:first-child) {
+footer .list li:not(:first-child) {
   margin-top: 15px;
 }
 footer hr {
@@ -585,18 +585,18 @@ footer .credentials {
   display: flex;
   justify-content: space-between;
 }
-footer .credentials div {
+footer .credit {
   display: flex;
 }
-footer .credentials div span {
+footer .credit__label {
   font-family: "Readex Pro", sans-serif;
   white-space: nowrap;
 }
-footer .credentials div a {
+footer .credit__link {
   margin-left: 7px;
   display: flex;
 }
-footer .credentials div a:after {
+footer .credit__link:after {
   content: " ";
   width: 21px;
   height: 18px;
